--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wp5-boilerplate",
+  "name": "Battleship",
   "version": "1.0.0",
-  "description": "Boilerplate for basic JavaScript webapp",
+  "description": "Battleship on browser",
   "private": true,
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
